@@ -10,7 +10,24 @@ file(GLOB sources ${SRC_DIR}/*.cpp)
 
 set(NUM_TRUNC_CHARS 2)
 
-execute_process(COMMAND R CMD config --cppflags
+set (RPATH "R")
+set (RSCRIPT_PATH "Rscript")
+
+if (CMAKE_HOST_WIN32)
+    execute_process(COMMAND ${RSCRIPT_PATH} -e "cat(.Platform$r_arch)"
+                    OUTPUT_VARIABLE R_ARCH)
+		
+	execute_process(COMMAND R --arch ${R_ARCH} RHOME
+                    OUTPUT_VARIABLE R_HOME)
+	
+    string(REPLACE "\\" "/" R_HOME ${R_HOME})	
+	
+	set (RPATH ${R_HOME}/bin/R)
+endif()
+
+set (RCPPFLAGS_CMD " ${RPATH} " " CMD " " config " " --cppflags ") 
+
+execute_process(COMMAND ${RPATH} CMD config --cppflags
                 OUTPUT_VARIABLE RCPPFLAGS)
 
 if (CMAKE_HOST_WIN32)
@@ -22,7 +39,7 @@ endif()
 string(SUBSTRING ${RCPPFLAGS} ${NUM_TRUNC_CHARS} -1 RCPPFLAGS)
 include_directories(${RCPPFLAGS})
 
-execute_process(COMMAND R CMD config --ldflags
+execute_process(COMMAND ${RPATH} CMD config --ldflags
                 OUTPUT_VARIABLE RLDFLAGS)
 string(LENGTH ${RLDFLAGS} RLDFLAGS_LEN)
 
@@ -37,24 +54,24 @@ if (${RLDFLAGS} MATCHES "[-][l]([^;])+")
     string(STRIP ${RLDFLAGS_l} RLDFLAGS_l )
 endif()
 
-execute_process(COMMAND Rscript -e "Rcpp:::CxxFlags()"
+execute_process(COMMAND ${RSCRIPT_PATH} -e "Rcpp:::CxxFlags()"
                 OUTPUT_VARIABLE RCPPINCL)
 string(SUBSTRING ${RCPPINCL} ${NUM_TRUNC_CHARS} -1 RCPPINCL)
 include_directories(${RCPPINCL})
 
-execute_process(COMMAND Rscript -e "Rcpp:::LdFlags()"
+execute_process(COMMAND ${RSCRIPT_PATH} -e "Rcpp:::LdFlags()"
                 OUTPUT_VARIABLE RCPPLIBS)
 
-execute_process(COMMAND Rscript -e "RInside:::CxxFlags()"
+execute_process(COMMAND ${RSCRIPT_PATH} -e "RInside:::CxxFlags()"
                 OUTPUT_VARIABLE RINSIDEINCL)
 string(SUBSTRING ${RINSIDEINCL} ${NUM_TRUNC_CHARS} -1 RINSIDEINCL)
 include_directories(${RINSIDEINCL})
 message(${RINSIDEINCL})
 
-execute_process(COMMAND Rscript -e "RInside:::LdFlags()"
+execute_process(COMMAND ${RSCRIPT_PATH} -e "RInside:::LdFlags()"
                 OUTPUT_VARIABLE RINSIDELIBS)
 
-execute_process(COMMAND Rscript -e "RcppArmadillo:::CxxFlags()"
+execute_process(COMMAND ${RSCRIPT_PATH} -e "RcppArmadillo:::CxxFlags()"
                 OUTPUT_VARIABLE RCPPARMADILLOINCL)
 
 string(LENGTH ${RCPPARMADILLOINCL} INCLLENGTH)
@@ -124,13 +141,13 @@ else()
     FIND_LIBRARY(LAPACK_LIBRARY lapack)
 endif()
 
-execute_process(COMMAND R CMD config CXXFLAGS
+execute_process(COMMAND ${RPATH} CMD config CXXFLAGS
                 OUTPUT_VARIABLE RCXXFLAGS)
 
-execute_process(COMMAND R CMD config BLAS_LIBS
+execute_process(COMMAND ${RPATH} CMD config BLAS_LIBS
                 OUTPUT_VARIABLE RBLAS)
 
-execute_process(COMMAND R CMD config LAPACK_LIBS
+execute_process(COMMAND ${RPATH} CMD config LAPACK_LIBS
                 OUTPUT_VARIABLE RLAPACK)
 
 set(CMAKE_CXX_FLAGS "-W -Wall -pedantic -Wextra ${CMAKE_CXX_FLAGS}")
@@ -158,3 +175,4 @@ foreach (next_SOURCE ${sources})
    target_link_libraries(${source_name} ${LAPACK_LIBRARY})
    
 endforeach (next_SOURCE ${sources})
+
