@@ -3,26 +3,40 @@ cmake_minimum_required(VERSION 2.8.4)
 set (VERBOSE 1)
 set (SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/..)
 
-execute_process(COMMAND R RHOME
-                OUTPUT_VARIABLE R_HOME)
-
 file(GLOB sources ${SRC_DIR}/*.cpp)
 
 set(NUM_TRUNC_CHARS 2)
 
-execute_process(COMMAND R CMD config --cppflags
-                OUTPUT_VARIABLE RCPPFLAGS)
+set (RPATH "R")
+set (RSCRIPT_PATH "Rscript")
 
 if (CMAKE_HOST_WIN32)
-    if (${RCPPFLAGS} MATCHES "[-][I]([^ ;])+")
-	set (RCPPFLAGS ${CMAKE_MATCH_0})
+    execute_process(COMMAND ${RSCRIPT_PATH} -e "cat(.Platform$r_arch)"
+                    OUTPUT_VARIABLE R_ARCH)
+		
+	execute_process(COMMAND ${RPATH} --arch ${R_ARCH} RHOME
+                    OUTPUT_VARIABLE R_HOME)
+	
+    string(REPLACE "\\" "/" R_HOME ${R_HOME})	
+	
+	set (RPATH ${R_HOME}/bin/R)
+endif()
+
+set (RCPPFLAGS_CMD " ${RPATH} " " CMD " " config " " --cppflags ") 
+
+execute_process(COMMAND ${RPATH} CMD config --cppflags
+                OUTPUT_VARIABLE RCPPFLAGS)
+				
+if (CMAKE_HOST_WIN32)					
+	if (${RCPPFLAGS} MATCHES "[-][I]([^ ;])+")
+	    set (RCPPFLAGS ${CMAKE_MATCH_0})
     endif()
 endif()
 
 string(SUBSTRING ${RCPPFLAGS} ${NUM_TRUNC_CHARS} -1 RCPPFLAGS)
 include_directories(${RCPPFLAGS})
 
-execute_process(COMMAND R CMD config --ldflags
+execute_process(COMMAND ${RPATH} CMD config --ldflags
                 OUTPUT_VARIABLE RLDFLAGS)
 string(LENGTH ${RLDFLAGS} RLDFLAGS_LEN)
 
@@ -37,20 +51,20 @@ if (${RLDFLAGS} MATCHES "[-][l]([^;])+")
     string(STRIP ${RLDFLAGS_l} RLDFLAGS_l )
 endif()
 
-execute_process(COMMAND Rscript -e "Rcpp:::CxxFlags()"
+execute_process(COMMAND ${RSCRIPT_PATH} -e "Rcpp:::CxxFlags()"
                 OUTPUT_VARIABLE RCPPINCL)
 string(SUBSTRING ${RCPPINCL} ${NUM_TRUNC_CHARS} -1 RCPPINCL)
 include_directories(${RCPPINCL})
 
-execute_process(COMMAND Rscript -e "Rcpp:::LdFlags()"
+execute_process(COMMAND ${RSCRIPT_PATH} -e "Rcpp:::LdFlags()"
                 OUTPUT_VARIABLE RCPPLIBS)
 
-execute_process(COMMAND Rscript -e "RInside:::CxxFlags()"
+execute_process(COMMAND ${RSCRIPT_PATH} -e "RInside:::CxxFlags()"
                 OUTPUT_VARIABLE RINSIDEINCL)
 string(SUBSTRING ${RINSIDEINCL} ${NUM_TRUNC_CHARS} -1 RINSIDEINCL)
 include_directories(${RINSIDEINCL})
 
-execute_process(COMMAND Rscript -e "RInside:::LdFlags()"
+execute_process(COMMAND ${RSCRIPT_PATH} -e "RInside:::LdFlags()"
                 OUTPUT_VARIABLE RINSIDELIBS)
 
 if (CMAKE_HOST_WIN32)
@@ -100,13 +114,13 @@ else()
     endif()
 endif()
 
-execute_process(COMMAND R CMD config CXXFLAGS
+execute_process(COMMAND ${RPATH} CMD config CXXFLAGS
                 OUTPUT_VARIABLE RCXXFLAGS)
 
-execute_process(COMMAND R CMD config BLAS_LIBS
+execute_process(COMMAND ${RPATH} CMD config BLAS_LIBS
                 OUTPUT_VARIABLE RBLAS)
 
-execute_process(COMMAND R CMD config LAPACK_LIBS
+execute_process(COMMAND ${RPATH} CMD config LAPACK_LIBS
                 OUTPUT_VARIABLE RLAPACK)
 
 set(CMAKE_CXX_FLAGS "-W -Wall -pedantic -Wextra ${CMAKE_CXX_FLAGS}")
